commit ahead of meeting, fix header padding issue on homepage and navbar collapse bug on smaller screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -8,7 +8,7 @@ body {
     height: calc(100vh - 164px);
     color: bisque;
     font-family: "Tangerine", cursive;
-    font-size: 1rem;
+    font-size: 1.2rem;
 }
 
 
@@ -54,7 +54,7 @@ body {
 
 .navbar.navbar-light {
     background-color: bisque !important;
-    border-bottom: 5px solid #86c295 !important;
+    border-bottom: 1.5px solid #86c295 !important;
 }
 
 .enter-shop-button {
@@ -84,7 +84,7 @@ body {
     top: 0;
     left: 0;
     position: fixed;
-    background: bisque;
+    background: rgb(213, 243, 215);
     z-index: -1;
 }
 
@@ -127,11 +127,9 @@ body {
 }
 
 @media (max-width: 991px) {
-    .header-container {
-        padding-top: 116px;
-    }
+
 
     body {
-        height: calc(100vh - 116px);
+        padding-top: 164px;
     }
 }
